<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?ChiliSurfaceBackground"
    tools:context=".ui.auth.register.RegisterFragment">

    <LinearLayout
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_16dp"
        android:paddingBottom="@dimen/padding_16dp">

        <TextView
            style="@style/Chili.H5.Primary.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:text="@string/registration"
            android:textColor="@color/blue_5" />


        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/first_name" />

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/last_name" />

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_middle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/middle_name" />

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_inn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/inn" />

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/phone" />

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/password" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Chili.ButtonStyle.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:text="@string/register" />

    </LinearLayout>

</ScrollView>