<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_cargo_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?ChiliSurfaceBackground"
    tools:context=".ui.cargo.add.AddCargoActivity">

    <LinearLayout
        android:id="@+id/ll_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_back_blue" />

            <TextView
                style="@style/Chili.H5.Primary.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_cargo"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/padding_16dp"
                android:textColor="@color/blue_5" />

        </LinearLayout>

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/price"
            android:inputType="number" />

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/range"
            android:inputType="number" />

        <com.design2.chili2.view.input.UneditableInputView
            android:id="@+id/uiv_loading_unloading_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:hint="@string/loading_unloading_date"
            tools:text="" />

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_fact_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/fact_address"
            tools:text="" />

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/city" />

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/state" />

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/country" />

        <com.design2.chili2.view.input.BaseInputView
            android:id="@+id/biv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:gravity="start"
            android:hint="@string/phone"
            android:inputType="phone" />

        <com.design2.chili2.view.input.UneditableInputView
            android:id="@+id/uiv_choose_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:hint="@string/choose_storage" />

        <Button
            android:id="@+id/btn_add_cargo"
            style="@style/Chili.ButtonStyle.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:text="@string/add_cargo" />

    </LinearLayout>

</ScrollView>